<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RecipeActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/f_title_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_title_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_list_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_ingredient"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_name_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@color/divider_color" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/f_prepare_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_prepare_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prepare_mode" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/f_prepare_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.4">

                    <EditText
                        android:id="@+id/et_prepare_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prepration_time"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/f_serves"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3">

                    <EditText
                        android:id="@+id/et_serves"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:hint="@string/serves"
                        android:gravity="center"
                        android:maxLength="3"/>
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"/>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fb_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save_recipe" />

</android.support.design.widget.CoordinatorLayout>